--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.12.3",
+    "@mui/material": "^5.13.3",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@mui/x-data-grid": "^6.5.0",
+    "@mui/x-data-grid-generator": "^6.5.0",
     "@mui/x-date-pickers": "^6.3.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -35,6 +37,9 @@
       "react-app",
       "react-app/jest"
     ]
+  },
+  "resolutions": {
+    "@mui/utils": "~5.1.0"
   },
   "browserslist": {
     "production": [
